--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "cordova-plugin-huawei-anyoffice",
   "version": "1.1.0",
   "description": "This is a Cordova plugin for HuaWei AnyOffice.",
-  "main": "index.js",
+  "cordova": {
+    "id": "cordova-plugin-huawei-anyoffice",
+    "platforms": [
+      "android"
+    ]
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +20,12 @@
     "anyoffice"
   ],
   "author": "mfk11",
+  "engines": [
+    {
+      "name": "cordova",
+      "version": ">=3.0.0"
+    }
+  ],
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/mfk11/MyAnyOffice/issues"
