--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-huawei-anyoffice",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "This is a Cordova plugin for HuaWei AnyOffice.",
   "cordova": {
     "id": "cordova-plugin-huawei-anyoffice",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mfk11/MyAnyOffice.git"
+    "url": "https://github.com/mfk11/MyAnyOffice.git"
   },
   "keywords": [
     "cordova",
